--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,14 @@
-Inline icons
+Inline icons (can't with countersheetextension)
 Consider the sabotage strategy
 Resolve deadlocks when two tied players need to distribute contracts
-
+Player Aids
+Sign
+Sell sheet
+Rules
+Ally abilities
+Streamline the pitch, 20-30min demo
+Try
+    EOTR pay contracts, then tax then reveal all events
+    Each event played resolves an event.
+    Take whatever you qulify for on your turn
+    Strongest player starts the round.  Tie?
