Swapped Thug and Prophet abilities Renamed some cards Boosted Farm to 2g, but limited to 10g total Redid many science events Added events: Festival, Awards, Innovation Boosted: Mercenary, Bronze Mine, Warehouse, Cafe, Museum, Castle Nerfed: Knight, Bladesmith, Gravedigger, Security, Clothier, Uni

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,5 @@
+should you be forced to do something on your turn?
+define how discard pile works, order
 TS mod
 Python simulator to model dynamics between food/pop, payouts, taxes
 Inline icons (can't with countersheetextension)
