Iron Age + Overhaul All cards redone with stronger icon themes. Iron replaces Cloth +1 food +1 sci +1 happy demand per age Weapons get paid early First turn, build the event queue Closing a business now a free action Happy demand doesn't pay tax

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
-Scale treasury better by starting every playercount at 4 pop?
+distinguish demand again
+Make script check for different stats/wording/provisions among duplicates
 TS mod
 Python simulator to model dynamics between food/pop, payouts, taxes
 Inline icons (can't with countersheetextension)
