Added 15 more cards to give 3p and 4p more time to build businesses. 12 of these demand stone/bronze/iron. Reverted two-demand cards to one-demand. New events: War, Golden Age, Quell. Increasing population now adds 1 gold to treasury. Weapons changed to prepay only when contracted. New science icon. Clarified "play" vs "trigger" event. New action: "Pass" triggers bottom event.  Draws new event from draw pile if any. Many balance changes

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,4 @@
+idea: contracts paid from left to right?  So placement becomes important.  Seems kinda useless though since contract amts go up anyway.  Try it?
 distinguish demand again
 Make script check for different stats/wording/provisions among duplicates
 TS mod
